work on pipline

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../src/styles.css" />
   </head>
   <body>
-    <div class="mt-ts mt-ts__timeline">
+    <div class="mt-ts">
+      <div class="test"></div>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
