adjust css for absolute positioned timeline

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="mt-ts">
-      <div class="test"></div>
+      <div class="mt-ts__timeline"></div>
+      <div class="mt-ts__timeline-current-position"></div>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
