work on animations

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,57 +13,90 @@
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
       <article class="mt-ts__event">
         <div class="mt-ts__date">2014-2019</div>
         <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">Hello ich war ein SOFTWAREENTWICKLER was geht ab, helloooooooooo</div>
+        <div class="mt-ts__content">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+          no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </div>
       </article>
     </div>
     <script type="module">
