play around with background

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,97 +7,141 @@
     <link rel="stylesheet" href="../src/styles.css" />
   </head>
   <body>
-    <div class="mt-ts">
-      <div class="mt-ts__timeline"></div>
-      <div class="mt-ts__timeline-current-position"></div>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
-      <article class="mt-ts__event">
-        <div class="mt-ts__date">2014-2019</div>
-        <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
-        <div class="mt-ts__content">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-          no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </div>
-      </article>
+    <div class="mt-ts__container">
+      <section class="mt-ts__content-wrapper">
+        <div class="mt-ts__timeline"></div>
+        <div class="mt-ts__timeline-current-position"></div>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+        <article class="mt-ts__event">
+          <div class="mt-ts__column-one">
+            <div class="mt-ts__date">2014-2019</div>
+          </div>
+          <div class="mt-ts__column-two">
+            <div class="mt-ts__header">SOFTWAREENTWICKLER</div>
+            <div class="mt-ts__content">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.
+            </div>
+          </div>
+        </article>
+      </section>
     </div>
     <script type="module">
       import Timeline from '../dist/Timeline.js';
