play around with glass effect

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="mt-ts__container">
+      <canvas id="c"></canvas>
       <section class="mt-ts__content-wrapper">
         <div class="mt-ts__timeline"></div>
         <div class="mt-ts__timeline-current-position"></div>
